# golf-leader-board

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  railway.json  requirements.txt  vibe-unknown-design-20260408-152642.md  vibe-unknown-eng-review-test-plan-20260408-155046.md
.claude/: settings.local.json
.github/workflows/: neon-branches.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: auth.py  database.py  main.py  tables.py  templates.py
app/routers/: auth.py  chat.py  events.py  pages.py  scores.py
app/services/: leaderboard.py  ws_manager.py
app/templates/: base.html  chat.html  create_event.html  error.html  event_setup.html  index.html  leaderboard.html  score_entry.html
static/css/: style.css
tests/: conftest.py  test_auth.py  test_e2e.py  test_events.py  test_leaderboard.py  test_scores.py  test_ws.py
